# Graphing-Calculator

./: .gitignore.txt  CMakeLists.txt  README.md
include/glad/: glad.h
src/: axis.cpp  axis.h  controls.cpp  controls.h  function.cpp  function.h  glad.c  grid.cpp  grid.h  input.cpp  input.h  main.cpp  shaders.cpp  shaders.h
